--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {  
-  "name": "kaykay012/kaitest",  
+  "name": "laravel/strongshop",  
   "description": "this a test repository of kai.",  
   "keywords": [  
     "yii2",  
